tests/bad/intervalo2.nx
// intervalos tem de ter pelo menos 1 elemento

print([0..0])